--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <header class="cabecalho">
+        <h2>Olá Mundo</h2>
     <p>Que bom te ver por aqui, <span id="nome-ususario">Fulano</span></p>       
     </header>
 
